# gamejam-2020

./: .gitignore  CMakeLists.txt  README.MD
ReleaseBuilds/Linux/resources/maps/Generate/: checks.py  roadGradient.py
ReleaseBuilds/Linux/resources/shaders/fragment/: highlighted.glsl  particle_frag.glsl  shadow_frag.glsl  sky_frag.glsl  virus_death_frag.glsl  virus_frag.glsl
ReleaseBuilds/Linux/resources/shaders/vertex/: tex_vert.glsl  (+1 more)
ReleaseBuilds/Windows/resources/models/: 11769_four_leaf_clover_v1_l3.mtl  final_spray_can.mtl  towerSquare_bottomB.mtl
ext/glad/src/: glad.c
resources/config/: global_config.json
resources/maps/Generate/: buildings.py  generateBuildAndSpawn.sh  spawners.py
resources/models/: .cube.obj.swp  towerSquare_sampleB.mtl
resources/shaders/fragment/: blinn_phong.glsl  flash_red.glsl  minimap_border.glsl  radius_blended.glsl
resources/shaders/vertex/: virus_vert.glsl
resources/skyboxes/neutral/: vc_ft.tga  vc_lf.tga
resources/skyboxes/something/: vc_dn.tga  vc_up.tga
src/: AssetHelper.cpp  AssetHelper.h  BLZEntity.cpp  BLZEntity.h  BScene.cpp  BScene.h  Camera.cpp  Camera.h  Config.h  EntityHelper.cpp  EntityHelper.h  MapValues.h  Material.cpp  Material.h  Particles.cpp  Particles.h  PlayerHelper.cpp  PlayerHelper.h  Program.cpp  Program.h  RenderableWithPosition.h  Shape.cpp  Shape.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  WindowManager.cpp  WindowManager.h  _components.h  _instance_data.h  components.h  main.cpp  perlin.cpp  perlin.h
src/Systems/: SystemDelayedDespawn.cpp  SystemDelayedDespawn.h  SystemIncomingObjects.cpp  SystemIncomingObjects.h  SystemPhysics.cpp  SystemPhysics.h  SystemRender.cpp  SystemRender.h  SystemShadows.cpp  SystemShadows.h
src/UI/: GameUI.cpp  GameUI.h
src/Utils/: ColorConversion.cpp  ColorConversion.h
(+3 files in other folders)
